# FaceGraph-Manager

./: .gitignore  README.md  TRS.md  config.py  main.py  pyproject.toml  requirements.txt
core/: clustering.py  consolidation.py  database.py  engine.py  faiss_index.py  graph.py  scanner.py
ui/: canvas.py  cluster_panel.py  consolidation_dialog.py  main_window.py  nodes.py  scan_dialog.py
