[project]
name = "facegraph-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.7.4",
    "insightface>=0.7.3",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "pyside6>=6.5.0",
    "scikit-learn>=1.3.0",
]
